<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>
    <groupId>studio.ikara</groupId>
    <artifactId>security</artifactId>
    <version>1.1.0</version>
    <name>Security</name>
    <description>security</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <database.mysql.jdbc.password>Vishwas123#</database.mysql.jdbc.password>
        <database.mysql.jdbc.url>jdbc:mysql://localhost:3306/${database.name}</database.mysql.jdbc.url>
        <database.mysql.jdbc.user>root</database.mysql.jdbc.user>
        <!-- database connection (jOOQ codegen) -->
        <database.name>security</database.name>
        <database.schema>security</database.schema>
        <!-- directories -->
        <dir.main.java>src/main/java</dir.main.java>
        <dir.resources>src/main/resources</dir.resources>
        <dir.test.java>src/test/java</dir.test.java>
        <!-- build -->
        <env.ENVIRONMENT>dev</env.ENVIRONMENT>
        <java.version>25</java.version>
        <!-- service package coords -->
        <package.c.base>studio.ikara</package.c.base>
        <package.c.base.dir>studio/ikara</package.c.base.dir>
        <package.c.jooq>${package.c.base}.${package.c.server}.jooq</package.c.jooq>
        <package.c.server>security</package.c.server>
        <package.c.server.dir>security</package.c.server.dir>
        <package.i.commons-jooq.version>0.0.1-SNAPSHOT</package.i.commons-jooq.version>
        <package.i.commons-security.version>0.0.1-SNAPSHOT</package.i.commons-security.version>
        <!-- internal library versions -->
        <package.i.commons.version>0.0.1-SNAPSHOT</package.i.commons.version>
        <!-- open-source dependency versions -->
        <package.o.jaxb.api.version>2.3.1</package.o.jaxb.api.version>
        <package.o.jaxb.runtime.version>4.0.0</package.o.jaxb.runtime.version>
        <package.o.jib.version>3.4.6</package.o.jib.version>
<package.o.jsoup.version>1.21.1</package.o.jsoup.version>
        <package.o.jwt.version>0.13.0</package.o.jwt.version>
        <package.o.mysql.connector.version>9.7.0</package.o.mysql.connector.version>
        <package.o.palantir-java.format.version>2.90.0</package.o.palantir-java.format.version>
        <package.o.spotless.version>3.4.0</package.o.spotless.version>
        <package.o.spring-cloud.version>2025.1.1</package.o.spring-cloud.version>
        <package.o.springdoc.version>3.0.3</package.o.springdoc.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${package.o.spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <!-- MySQL -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
        </dependency>
        <!-- jOOQ -->
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq-codegen</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${package.o.springdoc.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.amqp</groupId>
            <artifactId>spring-rabbit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-config</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.retry</groupId>
            <artifactId>spring-retry</artifactId>
        </dependency>
        <dependency>
            <groupId>studio.ikara</groupId>
            <artifactId>commons</artifactId>
            <version>${package.i.commons.version}</version>
        </dependency>
        <dependency>
            <groupId>studio.ikara</groupId>
            <artifactId>commons-jooq</artifactId>
            <version>${package.i.commons-jooq.version}</version>
        </dependency>
        <dependency>
            <groupId>studio.ikara</groupId>
            <artifactId>commons-security</artifactId>
            <version>${package.i.commons-security.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>spring-milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>spring-snapshot</id>
            <name>Spring Snapshot Repository</name>
            <url>https://repo.spring.io/snapshot</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${package.o.jib.version}</version>
                <configuration>
                    <container>
                        <jvmFlags>
                            <jvmFlag>--sun-misc-unsafe-memory-access=allow</jvmFlag>
                        </jvmFlags>
                    </container>
                    <from>
                        <image>eclipse-temurin:25-jre-alpine</image>
                    </from>
                    <to>
                        <image>ghcr.io/ikara-life/security</image>
                        <tags>
                            <tag>${env.ENVIRONMENT}</tag>
                            <tag>${project.version}</tag>
                        </tags>
                    </to>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <jvmArguments>--sun-misc-unsafe-memory-access=allow</jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>jooq</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-codegen-maven</artifactId>
                        <configuration>
                            <jdbc>
                                <driver>com.mysql.cj.jdbc.Driver</driver>
                                <url>${database.mysql.jdbc.url}</url>
                                <user>${database.mysql.jdbc.user}</user>
                                <password>${database.mysql.jdbc.password}</password>
                            </jdbc>
                            <generator>
                                <database>
                                    <name>org.jooq.meta.mysql.MySQLDatabase</name>
                                    <includes>SECURITY_.*</includes>
                                    <inputSchema>${database.schema}</inputSchema>
                                    <forcedTypes>
                                        <forcedType>
                                            <name>USER_STATUS_CODE</name>
                                            <userType>studio.ikara.security.enums.UserStatusCode</userType>
                                            <includeExpression>.*\.USER_STATUS_CODE</includeExpression>
                                            <includeTypes>.*</includeTypes>
                                            <enumConverter>true</enumConverter>
                                        </forcedType>
                                    </forcedTypes>
                                </database>
                                <generate>
                                    <deprecated>false</deprecated>
                                    <relations>true</relations>
                                    <records>true</records>
                                    <immutablePojos>false</immutablePojos>
                                    <fluentSetters>true</fluentSetters>
                                </generate>
                                <target>
                                    <packageName>${package.c.jooq}</packageName>
                                    <directory>${dir.main.java}</directory>
                                </target>
                            </generator>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>com.mysql</groupId>
                                <artifactId>mysql-connector-j</artifactId>
                                <version>${package.o.mysql.connector.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>javax.xml.bind</groupId>
                                <artifactId>jaxb-api</artifactId>
                                <version>${package.o.jaxb.api.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>org.glassfish.jaxb</groupId>
                                <artifactId>jaxb-runtime</artifactId>
                                <version>${package.o.jaxb.runtime.version}</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>spotless</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.diffplug.spotless</groupId>
                        <artifactId>spotless-maven-plugin</artifactId>
                        <version>${package.o.spotless.version}</version>
                        <configuration>
                            <java>
                                <includes>
                                    <include>${dir.main.java}/**/*.java</include>
                                    <include>${dir.test.java}/**/*.java</include>
                                </includes>
                                <excludes>
                                    <exclude>${dir.main.java}/**/jooq/**/*.java</exclude>
                                    <exclude>${dir.main.java}/**/generated/**/*.java</exclude>
                                </excludes>
                                <palantirJavaFormat>
                                    <version>${package.o.palantir-java.format.version}</version>
                                    <style>PALANTIR</style>
                                </palantirJavaFormat>
                                <importOrder/>
                                <removeUnusedImports>
                                    <engine>cleanthat-javaparser-unnecessaryimport</engine>
                                </removeUnusedImports>
                                <formatAnnotations/>
                                <trimTrailingWhitespace/>
                                <endWithNewline/>
                                <toggleOffOn/>
                            </java>
                            <pom>
                                <includes>
                                    <include>pom.xml</include>
                                </includes>
                                <sortPom>
                                    <encoding>UTF-8</encoding>
                                    <expandEmptyElements>false</expandEmptyElements>
                                    <keepBlankLines>false</keepBlankLines>
                                    <nrOfIndentSpace>4</nrOfIndentSpace>
                                    <sortDependencies>scope,groupId,artifactId</sortDependencies>
                                    <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
                                    <sortDependencyManagement>groupId,artifactId</sortDependencyManagement>
                                    <sortExecutions>false</sortExecutions>
                                    <sortModules>true</sortModules>
                                    <sortPlugins>groupId,artifactId</sortPlugins>
                                    <sortProperties>true</sortProperties>
                                </sortPom>
                            </pom>
                            <yaml>
                                <includes>
                                    <include>${dir.resources}/*.yml</include>
                                    <include>${dir.resources}/*.yaml</include>
                                </includes>
                                <jackson>
                                    <features>
                                        <INDENT_OUTPUT>true</INDENT_OUTPUT>
                                        <ORDER_MAP_ENTRIES_BY_KEYS>true</ORDER_MAP_ENTRIES_BY_KEYS>
                                    </features>
                                    <yamlFeatures>
                                        <WRITE_DOC_START_MARKER>true</WRITE_DOC_START_MARKER>
                                        <MINIMIZE_QUOTES>true</MINIMIZE_QUOTES>
                                        <SPLIT_LINES>true</SPLIT_LINES>
                                    </yamlFeatures>
                                </jackson>
                                <trimTrailingWhitespace/>
                                <endWithNewline/>
                            </yaml>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>com.diffplug.spotless</groupId>
                                <artifactId>spotless-maven-plugin</artifactId>
                                <version>${package.o.spotless.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>com.palantir.javaformat</groupId>
                                <artifactId>palantir-java-format</artifactId>
                                <version>${package.o.palantir-java.format.version}</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                    <goal>apply</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
